--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -40,14 +40,14 @@ i {
 
 /* background-images */
 .bg {
-    background: @bg-color url('../images/wallpaper/brickwall.png');
+    // background: @bg-color;
 }
 
 .single-board {
-    border: 1px solid #ddd;
+    // border: 1px solid #ddd;
     margin-bottom: 10px;
     min-height: 200px;
-    box-shadow: 0px 0px 10px #ddd;
+    // box-shadow: 0px 0px 10px #ddd;
     background-color: #fff;
     .br();
     .brief {
@@ -137,34 +137,31 @@ a {
 
 /* Header */
 #header {
-    background-color: @key-color;    
-    box-shadow: 0px 0px 5px #999;
+    border-bottom: 1px solid #ddd;
     #ihd {
-        color: #fff;
+        color: #444;
+        padding: 15px 0;
     }
     #logo {
         position: relative;
         h1 {
             margin-top: 0px;
-            margin-bottom: 0;
+            margin-bottom: 0px;
             a.logo {
                 padding-top: 12px;
                 padding-bottom: 12px;
-                padding-left: 32px;
-                background: url('/images/logo.png') no-repeat left center;
                 display: block;
-                font-family: 'Indie Flower', "Helvetica Neue",Helvetica,Arial,sans-serif;
+                font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
                 font-size: 20px;
                 font-weight: normal;
                 text-shadow: 1px 1px 2px #444;
-                color: #fff;
+                color: #444;
                 text-shadow: none;
-                letter-spacing: 2px;
                 float: left;
                 span.desc {
                     font-size: 12px;
                     padding-left: 10px;
-                    color: #fff;
+                    color: #444;
                 }
             }
         }
@@ -196,7 +193,7 @@ a {
         font-size: 18px;
         float: left;
         display: block;
-        color: #fff;
+        color: #444;
         margin-left: 10px;
         padding-top: 15px;
         padding-bottom: 15px;
@@ -204,11 +201,11 @@ a {
         padding-right: 15px;
         i {
             display: block;
-            color: #efefef;
+            color: #444;
         }
         &:hover {
             i {
-                color: #fff;
+                color: #444;
                 text-shadow: 0px 0px 1px #ddd;
             }
         };
@@ -281,6 +278,7 @@ a {
         }
     }
 }
+
 .hot-board-wrap {
     background-color: #f5f5f5;
     box-shadow: inset 0px 3px 10px #444;
@@ -288,6 +286,7 @@ a {
     overflow: hidden;
     display: none;
 }
+
 .share {
     color: #fff;
     padding-top: 30px;
@@ -317,6 +316,7 @@ a {
         }
     }
 }
+
 .board-nav {
     position: relative;
     padding: 5px 0;
@@ -369,10 +369,9 @@ a {
 }
 
 .banner {
-    background: #fff url('/images/wallpaper/geometry.png') left top;
     width: 100%;
     border-bottom: 1px solid #ddd;
-    box-shadow: 0px 1px 5px #ddd;
+    background: #fff url('/images/wallpaper/geometry.png') left top;
     .inner {
         padding: 10px 0;
         .title {
@@ -542,7 +541,6 @@ a {
     padding-right: 1px;
     border: 1px solid #ddd;
     background: #fff url('/images/b.png') repeat-x left bottom;
-    box-shadow: 0px 3px 5px #ddd;
 }
 .index-board {
     margin-bottom: 20px;
