--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,7 @@ html(ng-app="candy")
     link(rel='shortcut icon',type="image/x-icon",href="/images/favicon.ico")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/duoshuo.css')
+    block css
   body
     block header
         #header(ng-controller="boards")
