--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -978,7 +978,6 @@ a {
     -o-text-shadow: @arguments;
 }
 .box() {
-    box-shadow: 1px 1px 2px #ddd;
     border: 1px solid #ddd;
     background-color: #fff;
     padding: 20px;
@@ -1483,4 +1482,11 @@ h3.syncing {
 #boards-dropdown {
     background-color: #fff;
     padding: 20px 0;
+}
+
+.footer {
+    border-top: 1px solid #ddd;
+    background-color: #fff;
+    padding-bottom: 10px;
+    margin-top: 20px;
 }
