--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1073,7 +1073,6 @@ a:hover {
 }
 .comment-board {
   padding: 10px;
-  box-shadow: 1px 1px 2px #ddd;
   border: 1px solid #ddd;
   background-color: #fff;
   padding: 20px;
@@ -1532,4 +1531,10 @@ h3.syncing {
 #boards-dropdown {
   background-color: #fff;
   padding: 20px 0;
+}
+.footer {
+  border-top: 1px solid #ddd;
+  background-color: #fff;
+  padding-bottom: 10px;
+  margin-top: 20px;
 }
