--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,7 +40,7 @@ html(ng-app="candy")
               block main
                 .col-lg-9
                     block content
-                .col-lg-3
+                .col-lg-3.sidebar
                     block sidebar
                         include sidebar
     block footer
